--- a/metaverse.html
+++ b/metaverse.html
@@ -45,7 +45,7 @@
                 <a href="#" class="text-decoration-none text-white">About us</a>
             </div>
         </div>
-        <div class="row d-md-none noche position-absolute">
+        <div class="row d-sm-none noche position-absolute">
             <div class="col-3 text-white position-absolute uno">
                 <h1>29K+</h1>
                 Artworks
